Activado de seccion Contacto

--- a/blog_portafolio/main/templates/main/base.html
+++ b/blog_portafolio/main/templates/main/base.html
@@ -21,7 +21,7 @@
 
 {% include 'main/partial/nav.html' %}
 
-{% block contenido %}{% endblock %}
+{% block content %}{% endblock %}
 
 {% include 'main/partial/footer.html' %}
 
