--- a/blog_portafolio/blog/templates/detail.html
+++ b/blog_portafolio/blog/templates/detail.html
@@ -9,7 +9,7 @@
 
     {% include "comentarios.html" %}
     <p>
-        <a href="{% url 'base:post_share' post.id %}">
+        <a href="{% url 'blog:post_share' post.id %}">
             Compartir este post
         </a>
 
