--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -41,7 +41,7 @@
                 <a href="#services">Servicios</a>
                 <a href="#portfolio">Portafolio</a>
                 <a href="{% url 'blog:contacto' %}">Contacto</a>
-                <a href="#contact">Blog</a>
+                <a href="{% url 'blog:index' %}">Blog</a>
             </div>
         </div>
         <div class="nav-menu-btn"></div>
@@ -60,8 +60,8 @@
         </div>
         <div class="info">
             <h2>Hola, soy Rubén</h2>
-            <h3>Full stack developer Jr.</h3>
-            <p>Dame la oportunidad de aportar a tu empresa mis conocimientos y habilidades.</p>
+            <h3>{{yo.userprofile.titulo}}</h3>
+            <p>Démosno la oportunidad de compartir conocimientos.</p>
             <a href="{% url 'blog:contacto' %}" class="btn">Contáctame <i class="fas fa-arrow-circle-right"></i></a>
         </div>
         <div class="home-img">
@@ -84,21 +84,21 @@
             <div class="about-info">
                 <div class="description">
                     <h3>Me llamo Rubén Guerra</h3>
-                    <h4>En busca de nuevos <span>retos y desafíos</span> de aprendizaje</h4>
+                    <h4>En busca de nuevos <span>retos y desafíos</span> de aprendizaje.</h4>
                     <p>{{yo.userprofile.bio}}</p>
                 </div>
                 <ul class="professional-list">
                     <li class="list-item">
-                        <h3>5+</h3>
-                        <span>Años de <br> Experiencia</span>
+                        <h3>+15</h3>
+                        <span>Años de <br>Experiencia en el área editorial.</span>
                     </li>
                     <li class="list-item">
-                        <h3>5+</h3>
-                        <span>Clientes <br> satisfechos</span>
+                        <h3>+5</h3>
+                        <span>Años de experiencia <br> en el Diseño Gráfico</span>
                     </li>
                     <li class="list-item">
-                        <h3>5+</h3>
-                        <span>Algunos <br> proyectos</span>
+                        <h3>+5</h3>
+                        <span>Años como corrector de <br> contenidos</span>
                     </li>
                 </ul>
                 <a download href="{{yo.userprofile.cv.url}}" class="btn">Bajar CV <i class="fas fa-download"></i> </a>
@@ -115,7 +115,9 @@
         <div class="content">
             <div class="skills-description">
                 <h3>Formación académica y destrezas</h3>
-                <p>{{yo.userprofile.bio}}</p>
+                <p>Graduado en ciencias de la educación y la enseñanza de la lingüística, luego de retirarme de mi
+                    trabajo, me dediqué a poner en práctica y ampliar mis conocimientos de informática y programación, e
+                    incursionar en el área del diseño web y la inteligencia artificial.</p>
             </div>
             <div class="skills-info education-all">
                 <div class="education">
@@ -191,19 +193,19 @@
                     </ul>
                 </div>
                 <div class="education">
-                    <h4><label>Reconocimientos</label></h4>
+                    <h4><label for="">Intereses</label></h4>
                     <ul class="edu-list">
                         <li class="item">
-                            <span class="year">2021</span>
-                            <p>Mejor <span>Desarrollador</span> - Universidad de Melbourne</p>
+                            <span class="year">Inteligencia Artificial</span>
+                            <p>Aprender cada día más sobre el campo <span>IA</span> que moldeará el futuro inmediato.</p>
                         </li>
                         <li class="item">
-                            <span class="year">2020</span>
-                            <p>Mejor <span>Escritor</span> on line</p>
+                            <span class="year">Análisis de datos</span>
+                            <p>Los datos son <span>la energía del futuro</span> y debemos prepararnos para ello.</p>
                         </li>
                         <li class="item">
-                            <span class="year">2019</span>
-                            <p>Mejor <span>Freelancer</span></p>
+                            <span class="year">Modelos Deep Learning</span>
+                            <p>El uso del Deep learning <span>en medicina</span> es un campo de desarrollo fascinante.</p>
                         </li>
                     </ul>
                 </div>
@@ -260,7 +262,7 @@
         <h2 class="section-title-02">Servicios</h2>
         <div class="content">
             <div class="services-description">
-                <h3>Qué servicios proveo</h3>
+                <h3>¿Qué podemos hacer?</h3>
             </div>
             <ul class="service-list">
                 <li class="service-container">
@@ -273,17 +275,18 @@
                         <div class="service-modal-body">
                             <i class="fas fa-times modal-close-btn"></i>
                             <h3>Diseños UI/UX</h3>
-                            <h4>Para qué sirven?</h4>
-                            <p>Los diseño de interfaces con mejores desempeños van a permiter proveer al sistema mucha
+                            <h4>¿Para qué sirven?</h4>
+                            <p>Los diseños de interfaces con mejores desempeños van a permitir proveer al sistema de
+                                mucha
                                 información acerca de los intereses de cada uno de los usuarios, y por ende, de mejores
                                 herramientas de desarrollo.</p>
-                            <h4>Qué implica?</h4>
+                            <h4>¿Qué implica?</h4>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i> Mejores métodos de comunicación</li>
-                                <li><i class="fas fa-check-circle"></i> Mejor sistema de recopilación de información
+                                <li><i class="fas fa-check-circle"></i> Mejores métodos de comunicación.</li>
+                                <li><i class="fas fa-check-circle"></i> Mejor sistema de recopilación de información.
                                 </li>
-                                <li><i class="fas fa-check-circle"></i> Análisis de necesidades</li>
-                                <li><i class="fas fa-check-circle"></i> Ahorro de recursos</li>
+                                <li><i class="fas fa-check-circle"></i> Análisis de necesidades.</li>
+                                <li><i class="fas fa-check-circle"></i> Ahorro de recursos.</li>
 
                             </ul>
                         </div>
@@ -302,15 +305,15 @@
                             <i class="fas fa-times modal-close-btn"></i>
                             <h3>Branding & desing</h3>
                             <h4>Qué es Brand & desing?</h4>
-                            <p>Puede ser definido como una de las prácticas más importantes en la práctica de mercadeo
+                            <p>Puede ser definido como una de las prácticas más importantes en el mundo del mercadeo
                                 por medio de la creación del nombre, logo, diseño y elementos simbólicos relacionados
                                 con la identidad distintiva de una empresa y sus productos.</p>
-                            <h4>Qué proveemos?</h4>
+                            <h4>¿Qué podemos hacer?</h4>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i> Diseño de logos</li>
-                                <li><i class="fas fa-check-circle"></i> Diseño de emblemas</li>
-                                <li><i class="fas fa-check-circle"></i> Paquetes visuales de identidad</li>
-                                <li><i class="fas fa-check-circle"></i> Tarjetas de negocios y sistemas</li>
+                                <li><i class="fas fa-check-circle"></i> Diseño de logos.</li>
+                                <li><i class="fas fa-check-circle"></i> Diseño de emblemas.</li>
+                                <li><i class="fas fa-check-circle"></i> Paquetes visuales de identidad.</li>
+                                <li><i class="fas fa-check-circle"></i> Tarjetas de negocios y sistemas.</li>
 
                             </ul>
                         </div>
@@ -328,14 +331,14 @@
                         <div class="service-modal-body">
                             <i class="fas fa-times modal-close-btn"></i>
                             <h3>Full Stack Development</h3>
-                            <h4>Qué es Full stack Development?</h4>
-                            <p>Los servicios de un full stack Development están dirigidos a diseñar, construir, mantener
-                                y administrar todo aquello que implique el software de una página web.</p>
-                            <h4>Qué Proveemos?</h4>
+                            <h4>¿Qué es Full Stack Development?</h4>
+                            <p>Los servicios de un full stack development están dirigidos a diseñar, construir, mantener
+                                y administrar todo aquello que esté relacionado con el software de una página web.</p>
+                            <h4>¿Qué implica?</h4>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i> Desarrollo de aplicaciones web</li>
-                                <li><i class="fas fa-check-circle"></i> Testing</li>
-                                <li><i class="fas fa-check-circle"></i> Mantenimiento</li>
+                                <li><i class="fas fa-check-circle"></i> Desarrollo de aplicaciones web.</li>
+                                <li><i class="fas fa-check-circle"></i> Testing.</li>
+                                <li><i class="fas fa-check-circle"></i> Mantenimiento.</li>
 
                             </ul>
                         </div>
@@ -353,14 +356,14 @@
                         <div class="service-modal-body">
                             <i class="fas fa-times modal-close-btn"></i>
                             <h3>Escritor de contenido</h3>
-                            <h4>Qué es un Escritor de contenido?</h4>
+                            <h4>¿Qué es un Escritor de contenido?</h4>
                             <p>Planea, escribe y edita contenido web, casi siempre con propósitos de marqueting
-                                digital</p>
-                            <h4>Qué Proveemos?</h4>
+                                digital.</p>
+                            <h4>¿Qué logramos?</h4>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i> Contenido escrito para la web</li>
-                                <li><i class="fas fa-check-circle"></i> Escritura de blog para sitios web</li>
-                                <li><i class="fas fa-check-circle"></i> Contenido para las redes sociales</li>
+                                <li><i class="fas fa-check-circle"></i> Contenido escrito para la web.</li>
+                                <li><i class="fas fa-check-circle"></i> Escritura de blog para sitios web.</li>
+                                <li><i class="fas fa-check-circle"></i> Contenido para las redes sociales.</li>
 
                             </ul>
                         </div>
@@ -517,7 +520,7 @@
 
                     <div class="title">
                         <h4>Hablemos</h4>
-                        <h3>Sobre su</h3>
+                        <h3>Sobre nuestro</h3>
                         <h2>próximo proyecto</h2>
                     </div>
                     <div class="contact-btn">
@@ -645,7 +648,7 @@
 <!-- Sección de scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
 
-<script src="{% static 'js/principal.js' %}"></script>
+<script src="{% static 'principal.js' %}"></script>
 
 </body>
 </html>
