--- a/blog_portafolio/main/templates/main/partial/footer.html
+++ b/blog_portafolio/main/templates/main/partial/footer.html
@@ -5,8 +5,8 @@
     <div class="footer-container">
         <div class="about group">
             <h2>Rubén</h2>
-            <p>Full Stack web developer Jr.</p>
-            <a href="#about">Sobre mí</a>
+            <p>{{yo.userprofile.titulo.url}}</p>
+            <a href="{% url 'main:home' %}">Sobre mí</a>
         </div>
         <div class="hr"></div>
         <div class="info group">
