--- a/blog_portafolio/main/static/css/estilos.css
+++ b/blog_portafolio/main/static/css/estilos.css
@@ -288,7 +288,8 @@ header.sticky .nav-bar{
     width: 90%;
     transform: translate(0, 0);
     border-radius: 50%;
-    border: 4px solid #000;
+    background: rgba(255, 255, 255, 0.1);
+    border: 4px solid #fff;
 }
 
 .home .scroll-down{
