--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -53,9 +53,9 @@
 <section class="home" id="home">
     <div class="home-container">
         <div class="media-icons">
-            <a href="https:/www.facebook.com"><i class="fab fa-facebook-f"></i></a>
-            <a href=""><i class="fab fa-linkedin"></i></a>
-            <a href=""><i class="fab fa-github"></i></a>
+            <a href="https:/www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https:/www.linkedin.com/in/rubenjguerra" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/rubenguerra" target="_blank"><i class="fab fa-github"></i></a>
             <a href=""><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="info">
@@ -129,7 +129,7 @@
                         </li>
                         <li class="item">
                             <span class="year">2004-2008</span>
-                            <p><span>Licenciado</span> en enseñanza del castellano y literatura.</p>
+                            <p><span>Licenciado</span> en enseñanza del castellano y la literatura.</p>
                         </li>
                         <li class="item">
                             <span class="year">1997-2000</span>
@@ -158,7 +158,7 @@
                         <li class="bar">
                             <div class="info">
                                 <span>Javascript</span>
-                                <span>75%</span>
+                                <span>70%</span>
                             </div>
                             <div class="line javascript"></div>
                         </li>
@@ -193,19 +193,22 @@
                     </ul>
                 </div>
                 <div class="education">
-                    <h4><label for="">Intereses</label></h4>
+                    <h4><label>Intereses</label></h4>
                     <ul class="edu-list">
                         <li class="item">
                             <span class="year">Inteligencia Artificial</span>
-                            <p>Aprender cada día más sobre el campo <span>IA</span> que moldeará el futuro inmediato.</p>
+                            <p>Aprender cada día más sobre el campo de la <span>IA</span> que moldeará el futuro
+                                inmediato.</p>
                         </li>
                         <li class="item">
                             <span class="year">Análisis de datos</span>
-                            <p>Los datos son <span>la energía del futuro</span> y debemos prepararnos para ello.</p>
+                            <p>Los datos son <span>la energía de nuestro presente</span> y debemos prepararnos para
+                                usarlos.</p>
                         </li>
                         <li class="item">
                             <span class="year">Modelos Deep Learning</span>
-                            <p>El uso del Deep learning <span>en medicina</span> es un campo de desarrollo fascinante.</p>
+                            <p>El uso del Deep learning <span>en medicina</span> es un campo de desarrollo fascinante.
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -224,6 +227,7 @@
                     <h4><label>Universidad de Oriente, Venezuela</label></h4>
                     <p>Encargado de la publicación y diseño de material bibliográfico de la Universidad de Oriente,
                         Núcleo de Sucre</p>
+
                 </div>
 
                 <div class="experience-card">
@@ -249,7 +253,40 @@
                     <p>Diseñador y diagramador de contenido de material bibliográfico producido por la Universidad.</p>
                 </div>
 
+                <!--
+             Las pruebas comienzan aquí
+
+                <div class="carta-contenedor">
+                    <div class="card">
+                        <div class="content">
+                            <h2>Profesor</h2>
+                            <h3>PROFESOR</h3>
+                            <p>Profesor de aula de los últimos años de educacion secundaria, en el área de castellano y
+                                literatura.
+                            </p>
+                            <h3>2008-2009</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carta-contenedor">
+                    <div class="card">
+                        <div class="content">
+                            <h2>Diagramador</h2>
+                            <h3>DISEÑADOR Y DIAGRAMADOR</h3>
+                            <p>Diseñador y diagramador de contenido de material bibliográfico producido por la
+                                Universidad.
+                            </p>
+                            <h3>1995-2008</h3>
+                        </div>
+                    </div>
+                </div>
+
+                 Las pruebas terminan aquí
+                 -->
             </div>
+
+
         </div>
     </div>
 </section>
@@ -304,7 +341,7 @@
                         <div class="service-modal-body">
                             <i class="fas fa-times modal-close-btn"></i>
                             <h3>Branding & desing</h3>
-                            <h4>Qué es Brand & desing?</h4>
+                            <h4>¡Qué es Brand & desing?</h4>
                             <p>Puede ser definido como una de las prácticas más importantes en el mundo del mercadeo
                                 por medio de la creación del nombre, logo, diseño y elementos simbólicos relacionados
                                 con la identidad distintiva de una empresa y sus productos.</p>
@@ -383,131 +420,33 @@
         <h2 class="section-title-02">Portafolio</h2>
         <div class="content">
             <div class="portfolio-list">
+                 {% for p in portfolio %}
+                    {% if p.es_activo %}
                 <div class="img-card-container">
-                    <div class="img-card">
-                        <div class="overlay"></div>
-                        <div class="info">
-                            <h3>Diseño Web</h3>
-                            <span>Youtube</span>
-                        </div>
-                        <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen1">
-                    </div>
-                    <div class="portfolio-model flex-center">
-                        <div class="portfolio-model-body">
-                            <i class="fas fa-times portfolio-close-btn"></i>
-                            <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="img-card-container">
-                    <div class="img-card">
-                        <div class="overlay"></div>
-                        <div class="info">
-                            <h3>Diseño Web</h3>
-                            <span>Youtube</span>
-                        </div>
-                        <img src="{% static 'imagen/2022-03-27.png' %}" alt="imagen1">
-                    </div>
-                    <div class="portfolio-model flex-center">
-                        <div class="portfolio-model-body">
-                            <i class="fas fa-times portfolio-close-btn"></i>
-                            <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/2022-03-27.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="img-card-container">
                     <div class="img-card">
                         <div class="overlay"></div>
                         <div class="info">
                             <h3>Diseño Web</h3>
-                            <span>Youtube</span>
+                            <span>{{ p.descripcion }}</span>
                         </div>
-                        <img src="{% static 'imagen/jaguarete.png' %}" alt="imagen1">
+                        <img src="{{ p.imagen.url }}" alt="Portafolio">
                     </div>
                     <div class="portfolio-model flex-center">
                         <div class="portfolio-model-body">
                             <i class="fas fa-times portfolio-close-btn"></i>
                             <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/jaguarete.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
+                            <img src="{{ p.imagen.url }}" alt="Portafolio">
+                            <p>{{ p.texto }}</p>
                         </div>
                     </div>
-                </div>
 
-                <div class="img-card-container">
-                    <div class="img-card">
-                        <div class="overlay"></div>
-                        <div class="info">
-                            <h3>Diseño Web</h3>
-                            <span>Youtube</span>
-                        </div>
-                        <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen1">
-                    </div>
-                    <div class="portfolio-model flex-center">
-                        <div class="portfolio-model-body">
-                            <i class="fas fa-times portfolio-close-btn"></i>
-                            <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="img-card-container">
-                    <div class="img-card">
-                        <div class="overlay"></div>
-                        <div class="info">
-                            <h3>Diseño Web</h3>
-                            <span>Youtube</span>
-                        </div>
-                        <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen1">
-                    </div>
-                    <div class="portfolio-model flex-center">
-                        <div class="portfolio-model-body">
-                            <i class="fas fa-times portfolio-close-btn"></i>
-                            <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
-                        </div>
-                    </div>
                 </div>
+{% endif %}
+                    {% endfor %}
 
-                <div class="img-card-container">
-                    <div class="img-card">
-                        <div class="overlay"></div>
-                        <div class="info">
-                            <h3>Diseño Web</h3>
-                            <span>Youtube</span>
-                        </div>
-                        <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen1">
-                    </div>
-                    <div class="portfolio-model flex-center">
-                        <div class="portfolio-model-body">
-                            <i class="fas fa-times portfolio-close-btn"></i>
-                            <h3>Diseño WEB</h3>
-                            <img src="{% static 'imagen/estudio_creat.png' %}" alt="imagen2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vitae, est iste eos
-                                perspiciatis tempora deleniti ipsa molestiae ipsam veritatis eveniet nisi optio
-                                exercitationem maxime iusto aspernatur aliquam dolor tempore?</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -542,57 +481,22 @@
             <div class="content">
                 <div class="swiper client-swiper">
                     <div class="swiper-wrapper">
+                        {% for c in certificados %}
+                        {% if c.es_activo %}
                         <div class="swiper-slide flex-center">
                             <div class="client-img"> <!-- Imágenes de certificados -->
-                                <img src="{% static 'imagen/Ruben Guerra - Feature Engineering.png' %}"
+                                <img src="{{ c.imagen.url }}"
                                      alt="certificado">
                             </div>
                             <div class="client-details">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus reiciendis
-                                    quibusdam quia vel corrupti odit atque neque, expedita amet ad delectus unde!
-                                    Perferendis, ipsa! Placeat consectetur atque minima unde harum!</p>
+                                <p>{{ c.descripcion }}</p>
 
                             </div>
                         </div>
 
-                        <div class="swiper-slide flex-center">
-                            <div class="client-img"> <!-- Imágenes de certificados -->
-                                <img src="{% static 'imagen/Ruben Guerra - Intermediate Machine Learning.png' %}"
-                                     alt="certificado">
-                            </div>
-                            <div class="client-details">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus reiciendis
-                                    quibusdam quia vel corrupti odit atque neque, expedita amet ad delectus unde!
-                                    Perferendis, ipsa! Placeat consectetur atque minima unde harum!</p>
+                        {% endif %}
+                        {% endfor %}
 
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide flex-center">
-                            <div class="client-img"> <!-- Imágenes de certificados -->
-                                <img src="{% static 'imagen/Ruben Guerra - Intro to Game AI and Reinforcement Learning.png' %}"
-                                     alt="certificado">
-                            </div>
-                            <div class="client-details">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus reiciendis
-                                    quibusdam quia vel corrupti odit atque neque, expedita amet ad delectus unde!
-                                    Perferendis, ipsa! Placeat consectetur atque minima unde harum!</p>
-
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide flex-center">
-                            <div class="client-img"> <!-- Imágenes de certificados -->
-                                <img src="{% static 'imagen/Ruben Guerra - Machine Learning Explainability.png' %}"
-                                     alt="certificado">
-                            </div>
-                            <div class="client-details">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus reiciendis
-                                    quibusdam quia vel corrupti odit atque neque, expedita amet ad delectus unde!
-                                    Perferendis, ipsa! Placeat consectetur atque minima unde harum!</p>
-
-                            </div>
-                        </div>
 
                     </div>
                     <div class="swiper-button-next">
@@ -617,7 +521,7 @@
         <div class="about group">
             <h2>Rubén</h2>
             <p>Full Stack web developer Jr.</p>
-            <a href="#about">Sobre mí</a>
+            <a href="{% url 'main:home' %}">Sobre mí</a>
         </div>
         <div class="hr"></div>
         <div class="info group">
@@ -641,7 +545,7 @@
         </div>
     </div>
     <div class="footer-copyright group">
-        <p>2022. Derechos reservados</p>
+        <p>La constancia debe ser la constante de todos los días</p>
     </div>
 </footer>
 
@@ -649,6 +553,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
 
 <script src="{% static 'principal.js' %}"></script>
+<script type="text/javascript" src="{% static 'vanilla-tilt.js' %}"></script>
+<script>
+        VanillaTilt.init(document.querySelectorAll(".card"), {
+            max: 25,
+            speed: 400,
+            glare: true,
+            "max-glare": 1,
+        });
+
+
+
+</script>
 
 </body>
 </html>
