--- a/blog_portafolio/blog/templates/list.html
+++ b/blog_portafolio/blog/templates/list.html
@@ -5,18 +5,17 @@
 <h1>Mi Blog</h1>
 
 {% if tag %}
-<h2>Posts tagged with "{{ tag.name }}"</h2>
+<h2>Posts que tienen la etiqueta: "{{ tag.name }}"</h2>
 {% endif %}
 
-<p>
+<p class="tags">
     Tags:
     {% for tag in post.tags.all %}
-    <a href="{% url 'base:post_list_by_tag' tag.slug %}">
+    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
     {{ tag.name }}
     </a>
     {% if not forloop.last %}, {% endif %}
     {% endfor %}
-
 </p>
 
 {% endblock %}
