--- a/blog_portafolio/blog/templates/post.html
+++ b/blog_portafolio/blog/templates/post.html
@@ -26,7 +26,9 @@
                 <div class="post-title">
                     <a href="#">{{ post.titulo }}</a>
                     <p>{{ post.descripcion }}</p>
-                    <p class="tags">Etiquetas: {{ post.tags.all|join:", " }}</p>
+                    <!--
+                    <p class="tags">Palabras clave: {{ post.tags.all|join:", " }}</p>
+                    -->
 
                     <hr>
 
@@ -39,11 +41,21 @@
                         <div class="popular-tags">
                             <h2>Etiquetas</h2>
                             <div class="tags flex-row">
+                                <p class=""tags>
+                                {% for tag in post.tags.all %}
+                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+
+                                {% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                                </p>
+                                <!--
+                                <p class="tags">Este post trata sobre: {{ post.tags.all|join:", " }}</p>
+
                                 <span class="tag" data-aos="flip-up" data-aos-delay="100">Algoritmos</span>
                                 <span class="tag" data-aos="flip-up" data-aos-delay="200">Tecnología</span>
                                 <span class="tag" data-aos="flip-up" data-aos-delay="300">NLP</span>
                                 <span class="tag" data-aos="flip-up" data-aos-delay="400">Inteligencia</span>
-
+                                -->
                             </div>
                         </div>
                         <hr>
