--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -179,72 +179,66 @@
             </div>
             <div class="skills-info">
                 <div class="experience-card">
-                    <div class="upper">
-                        <h3>Jefe editor</h3>
-                        <h5>Delegado de Publicaciones</h5>
-                        <span>2008-2018</span>
-                    </div>
-                    <div class="hr"></div>
-                    <h4><label>Universidad de Oriente, Venezuela</label></h4>
-                    <p>Encargado de la publicación y diseño de material bibliográfico de la Universidad de Oriente,
-                        Núcleo de Sucre</p>
+                    <div class="carta-contenedor">
+                        <div class="card">
+                            <div class="content">
+                                <h3>Jefe editor</h3>
+                                <div class="hr"></div>
+                                <h5>Delegado de Publicaciones</h5>
+                                <span>2008-2018</span>
+                                <h4><label>UDO-Sucre, Venezuela</label></h4>
+                                <div class="hr"></div>
+                                <p>Encargado de la publicación y diseño de material bibliográfico de la Universidad de
+                                    Oriente,
+                                    Núcleo de Sucre.</p>
+                                <div class="hr"></div>
 
-                </div>
-
-                <div class="experience-card">
-                    <div class="upper">
-                        <h3>Profesor</h3>
-                        <h5>Profesor de castellano y literatura</h5>
-                        <span>2008-2009</span>
-                    </div>
-                    <div class="hr"></div>
-                    <h4><label>Liceo "Caigüire"</label></h4>
-                    <p>Profesor de aula de los últimos años de educacion secundaria, en el área de castellano y
-                        literatura</p>
-                </div>
-
-                <div class="experience-card">
-                    <div class="upper">
-                        <h3>Diagramador</h3>
-                        <h5>Diseño y diagramación</h5>
-                        <span>1995-2008</span>
-                    </div>
-                    <div class="hr"></div>
-                    <h4><label>Universidad de Oriente, Venezuela</label></h4>
-                    <p>Diseñador y diagramador de contenido de material bibliográfico producido por la Universidad.</p>
-                </div>
-
-                <!--
-             Las pruebas comienzan aquí
-
-                <div class="carta-contenedor">
-                    <div class="card">
-                        <div class="content">
-                            <h2>Profesor</h2>
-                            <h3>PROFESOR</h3>
-                            <p>Profesor de aula de los últimos años de educacion secundaria, en el área de castellano y
-                                literatura.
-                            </p>
-                            <h3>2008-2009</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="carta-contenedor">
-                    <div class="card">
-                        <div class="content">
-                            <h2>Diagramador</h2>
-                            <h3>DISEÑADOR Y DIAGRAMADOR</h3>
-                            <p>Diseñador y diagramador de contenido de material bibliográfico producido por la
-                                Universidad.
-                            </p>
-                            <h3>1995-2008</h3>
+                <div class="experience-card">
+                    <div class="carta-contenedor">
+                        <div class="card">
+                            <div class="content">
+                                <h3>Profesor</h3>
+                                <div class="hr"></div>
+                                <h5>Profesor de castellano y literatura</h5>
+                                <span>2008-2009</span>
+                                <h4><label>Liceo "Caigüire", Venezuela</label></h4>
+                                <div class="hr"></div>
+                                <p>Profesor de aula de los últimos años de educacion secundaria, en el área de
+                                    castellano y
+                                    literatura.</p>
+                                <div class="hr"></div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                 Las pruebas terminan aquí
-                 -->
+                <div class="experience-card">
+                    <div class="carta-contenedor">
+                        <div class="card">
+                            <div class="content">
+                                <h3>Diagramador</h3>
+                                <div class="hr"></div>
+                                <h5>Diseño y diagramación</h5>
+                                <span>1995-2008</span>
+                                <h4><label>UDO-Sucre, Venezuela</label></h4>
+                                <div class="hr"></div>
+                                <p>Diseñador y diagramador de contenido de material bibliográfico producido por la
+                                    Universidad.
+                                </p>
+                                <div class="hr"></div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
 
 
@@ -522,6 +516,9 @@
             glare: true,
             "max-glare": 1,
         });
+
+
+
 
 
 
